--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
     "expressjs": "^1.0.1",
-    "mongoose": "^8.1.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "parser": "^0.1.4"
   }
 }
