--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "expressjs": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "mongoose-paginate": "^5.0.3",
     "parser": "^0.1.4"
   }
 }
